# wgpu-labs

./: .gitignore  CMakeLists.txt  build-and-run.sh
inc/: constants.h  dynamic_bind_group.hpp  init.hpp  model.h  state.h  tinyobj_loader_c.h  util.hpp
shaders/: compute.glsl  frag.glsl  fragment.glsl  vert.glsl  vertex.glsl
src/: constants.cpp  dynamic_bind_group.cpp  init.cpp  main.cpp  model.cpp  util.cpp
src/utils/: render.cpp  webgpu.cpp
